// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ConfigProvider componentConfig.Menu default 1`] = `
<div
  class="arco-menu arco-menu-light arco-menu-vertical"
  tabindex="1"
>
  <div
    class="arco-menu-inner"
  />
</div>
`;

exports[`ConfigProvider componentConfig.Menu set className globally 1`] = `
<div
  class="arco-menu arco-menu-light arco-menu-vertical global-default-class"
  tabindex="1"
>
  <div
    class="arco-menu-inner"
  />
</div>
`;

exports[`ConfigProvider componentConfig.Menu set className globally and component set className itself. 1`] = `
<div
  class="arco-menu arco-menu-light arco-menu-vertical component-class"
  tabindex="1"
>
  <div
    class="arco-menu-inner"
  />
</div>
`;

exports[`Menu overflowItems should be pack up 1`] = `
<div
  class="arco-menu arco-menu-light arco-menu-horizontal"
  style="width: 600px;"
  tabindex="1"
>
  <div
    class="arco-menu-inner"
  >
    <div
      class="arco-menu-overflow-wrap"
    >
      <div
        class="arco-menu-pop arco-menu-pop-header arco-menu-overflow-sub-menu-mirror"
      >
        <span>
          ···
        </span>
        <span
          class="arco-menu-icon-suffix"
        >
          <svg
            class="arco-icon arco-icon-down"
            fill="none"
            height="1em"
            stroke="currentColor"
            stroke-width="4"
            viewBox="0 0 48 48"
            width="1em"
          >
            <path
              d="M39.6 17.443 24.043 33 8.487 17.443"
            />
          </svg>
        </span>
      </div>
      <div
        class="arco-menu-item arco-menu-overflow-hidden-menu-item"
      >
        设计指南
      </div>
      <div
        class="arco-menu-item arco-menu-overflow-hidden-menu-item"
      >
        区块
      </div>
      <div
        class="arco-menu-item arco-menu-overflow-hidden-menu-item"
      >
        模块
      </div>
      <div
        class="arco-menu-pop arco-menu-pop-header arco-menu-selected arco-menu-overflow-hidden-menu-item"
      >
        <span>
          组件
        </span>
        <span
          class="arco-menu-icon-suffix"
        >
          <svg
            class="arco-icon arco-icon-down"
            fill="none"
            height="1em"
            stroke="currentColor"
            stroke-width="4"
            viewBox="0 0 48 48"
            width="1em"
          >
            <path
              d="M39.6 17.443 24.043 33 8.487 17.443"
            />
          </svg>
        </span>
        <div
          class="arco-menu-selected-label"
        />
      </div>
      <div
        class="arco-menu-pop arco-menu-pop-header arco-menu-overflow-hidden-menu-item"
      >
        <span>
          布局组件
        </span>
        <span
          class="arco-menu-icon-suffix"
        >
          <svg
            class="arco-icon arco-icon-down"
            fill="none"
            height="1em"
            stroke="currentColor"
            stroke-width="4"
            viewBox="0 0 48 48"
            width="1em"
          >
            <path
              d="M39.6 17.443 24.043 33 8.487 17.443"
            />
          </svg>
        </span>
      </div>
      <div
        class="arco-menu-item arco-menu-overflow-hidden-menu-item"
      >
        工具
      </div>
      <div
        class="arco-menu-item arco-menu-overflow-hidden-menu-item"
      >
        主题实验室
      </div>
    </div>
  </div>
</div>
`;
